[package]
name = "midia"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["levinion <levinnion@gmail.com>"]
description = "A simple wrapper for writing the midi file easier."
repository = "https://github.com/levinion/midia"
documentation = "https://docs.rs/midia"
keywords = ["music", "midi", "midia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
